fix participant avatar size on small size

--- a/plugins/chat/assets/stylesheets/common/chat-thread-participants.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-thread-participants.scss
@@ -39,6 +39,8 @@
         margin-right: -12px;
 
         .avatar {
+          width: 22px;
+          height: 22px;
           border: 1px solid var(--primary-very-low);
         }
       }
